samples/_failures_safe/1760959745_787f6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d144699b.c: In function ‘main’:
./samples/SAFE/__tmp_d144699b.c:146:12: error: missing terminating " character
  146 |     printf("Unique words:
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d144699b.c:146:5: error: expected expression at end of input
  146 |     printf("Unique words:
      |     ^~~~~~
./samples/SAFE/__tmp_d144699b.c:146:5: error: expected declaration or statement at end of input
